--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
+    "tailwind-fontawesome": "^0.7.1",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
