--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "websitereact",
+  "homepage": "https://diogopcastelos.pt",
   "private": true,
   "version": "0.0.0",
   "type": "module",
