--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.0.0",
+    "firebase": "^11.6.1",
     "gh-pages": "^6.3.0",
     "motion": "^12.0.6",
     "react": "^18.3.1",
